# Clean-Architecture

./: .gitignore  LICENSE  Makefile  README.md  config.py  env.example.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: b2bc0cb6b1e7_add_version_and_lock_fields_to_user_.py  c88bd9002b97_create_table_users_pricing_plan_.py
src/api/dependencies/: auth_dep.py  db_dep.py
src/api/routes/: auth_route.py  error.py  order_route.py  user_route.py
src/api/schemas/: auth_schema.py  base_schema.py  order_schema.py  user_schema.py
src/app/event/: event_dispatcher.py
src/app/schemas/: auth_schema.py  base_schema.py  order_schema.py  user_schema.py
src/app/services/: __init__.py  unit_of_work_service.py
src/app/use_case/auth/: change_password_use_case.py  (+2 more)
src/domain/entities/: order.py  user.py
src/domain/errors/: exceptions.py
src/domain/events/: base.py  order.py  user.py
src/domain/repositories/: base_repository.py  order_repository.py  user_repository.py
src/domain/services/: user_registration_service.py
src/domain/value_objects/: audit_log.py  order.py  pricing_plan.py  subscription.py  user.py
src/infras/event/: event_dispatcher.py  get_event_dispatcher.py
src/infras/models/: __init__.py  audit_log_model.py  base.py  order_model.py  pricing_plan_model.py  settings.py  subscription_model.py  user_model.py
src/infras/repositories/: order_repository.py  user_repository.py
src/infras/services/: sql_unit_of_work_service.py
src/infras/storage/: engine.py
src/lib/: logger.py  result.py  security.py  send_email.py
(+5 files in other folders)
